--- a/index.html
+++ b/index.html
@@ -3,37 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Mimitapcode</title>
   </head>
   <body>
-    <table>
-        <thead>
-            <tr>
-                <th>Tên sản phẩm</th>
-                <th>Giá sản phẩm</th>
-                <th>Số lượng còn lại</th>
-            </tr>
-        </thead>
-        </tr>    
-            <td>Áo thun nam</td>
-            <td>100.000</td>
-            <td>50</td>
-        </tr>
-        <tr>
-            <td>Quần jean nữ</td>
-            <td>200.000</td>
-            <td>20</td>
-        </tr>
-        <tr>
-            <td>Giày thể thao</td>
-            <td>300.000</td>
-            <td>30</td>
-        </tr>
-        <tr>
-            <td>Remark</td>
-            <td colspan="2">Chỉ thống kê sp trong kho</td>
-        </tr>
-        
-    </table>
+    <h1>Tớ là mimi</h1>
   </body>
 </html>
